# metantic

./: .gitignore  README.md  publish.sh  pyproject.toml
src/metantic/: __init__.py  _paths.py  fields.py  omit.py  partial.py  take.py  util.py
src/metantic/fastapi/: __init__.py  deps.py
src/metantic/paths/: __init__.py  _builder.py  _str.py  _validate.py  at.py  path.py
