[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metantic"
version = "0.1.1"
authors = [
    {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "Metaprogramming with pydantic Models (creating types from types) "
dependencies = [
    "pydantic"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}
